--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1804,7 +1804,7 @@ input, select, textarea {
 					-webkit-transition: background-color .2s ease-in-out;
 					-ms-transition: background-color .2s ease-in-out;
 					transition: background-color .2s ease-in-out;
-					background-color: #444;
+					background-color: #8c8c8c;
 					border-radius: 6px;
 					box-shadow: inset 0px 0px 0px 1px #282828, inset 0px 2px 1px 0px rgba(255, 255, 255, 0.1);
 					color: #2E2E2E !important;
@@ -1844,7 +1844,7 @@ input, select, textarea {
 				}
 
 				ul.social li a.fa-github {
-					background-color: #FAFAFA;
+					background-color: #DA2713;
 				}
 
 				ul.social li a.fa-rss {
@@ -1941,7 +1941,7 @@ input, select, textarea {
 
 	.icon {
 		text-decoration: none;
-		text-decoration: none;
+		
 	}
 
 		.icon:before {
@@ -1974,7 +1974,7 @@ input, select, textarea {
 		}
 
 		.icon.featured {
-			color: #EA8A95;
+			color: #4C8AB0;
 			display: block;
 			margin: 0 0 1.5em 0;
 			cursor: default;
@@ -2071,7 +2071,6 @@ input, select, textarea {
 			outline: 0;
 			font-weight: 600;
 			border-radius: 8px;
-			color: #fff;
 			height: 2.5em;
 			line-height: 2.5em;
 			padding: 0 1.25em;
