--- a/index_html.css
+++ b/index_html.css
@@ -2,6 +2,10 @@ a { color:#FFFFFF; }
 a:visited { color:#FFFFFF; } 
 a:active { color:#0080FF; } 
 a:hover { color:#0080FF; } 
+		a.wsp5e11d928{ color:#000000; text-decoration: none} 
+		a.wsp5e11d928:visited{ color:#000000; text-decoration: none} 
+		a.wsp5e11d928:active{ color:#0080FF; text-decoration: none} 
+		a.wsp5e11d928:hover{ color:#0080C0; text-decoration: none} 
 #table_4df4f27 th { border: 0px solid #AFAFAF;  } 
 #table_4df4f27 td { border: 0px solid #AFAFAF;  } 
 #table_554fe58f th { border: 0px solid #E5E5E5;  } 
