--- a/index_html.css
+++ b/index_html.css
@@ -15,7 +15,7 @@ a { text-decoration: none; }
 /* Center Icons */
 .center { text-align: center; width: 100%; }
 /* Make FA icons blue */
-.fa-blue {color: Darkblue;}body { background-color:#CECECE; padding:0;  margin: 0; }
+.fa-blue {color: CornflowerBlue;}body { background-color:#CECECE; padding:0;  margin: 0; }
 .textstyle1 { text-align:left; }
 #container_318d4fa8 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:67px; background-color:#404040; position: fixed; z-index: 3000; }
 #container_318d4fa8_padding { margin: 10px; display: block;  }
