--- a/index_html.css
+++ b/index_html.css
@@ -93,6 +93,7 @@ a { text-decoration: none; }
 #cell_203c19b5 {  }
 #container_74966c12 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; background:none;  }
 #container_74966c12_padding { margin: 10px; display: block;  }
+#html_3dbc5511 { vertical-align: bottom; position:relative; display: inline-block; width:50%; height:100px; background:none;  }
 #cell_514d2553 {  }
 #container_769eeeb7 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; background:none;  }
 #container_769eeeb7_padding { margin: 10px; display: block;  }
