--- a/sub/template_html.css
+++ b/sub/template_html.css
@@ -6,27 +6,29 @@ a:hover { color:#0080FF; }
 		a.wsp5e11d928:visited{ color:#000000; text-decoration: none} 
 		a.wsp5e11d928:active{ color:#0080FF; text-decoration: none} 
 		a.wsp5e11d928:hover{ color:#0080C0; text-decoration: none} 
+#table_113dc287 th {  } 
+#table_113dc287 td {  } 
 /* make the default for hyperlinks NO UNDERLINE */
 a { text-decoration: none; }
 /* Center Icons */
 .center { text-align: center; width: 100%; }body { background-color:#CECECE; padding:0;  margin: 0; }
 .textstyle1 { text-align:left; }
-#container_58563d73 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:67px; background-color:#404040; position: fixed; z-index: 3000; }
-#container_58563d73_padding { margin: 10px; display: block;  }
-#container_6c8a3dbe { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:40px; background:none;  }
-#container_6c8a3dbe_padding { margin: 10px; display: block;  }
+#container_76422ff5 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:66px; background-color:#404040; position: fixed; z-index: 3000; }
 .textstyle2 { text-align:center; }
-#container_46613699 { vertical-align: top; position:relative; display: inline-block; width:3%; min-height:40px; background:none;  }
-#container_46613699_padding { margin: 10px; display: block;  }
+#table_113dc287 { vertical-align: bottom; position:relative; display: inline-table; width:22%; height:65px; background:none; table-layout: fixed;  }
+#cell_d018dcd {  }
 .textstyle3 { font-size:12pt; font-family:'Century Gothic', CenturyGothic, AppleGothic, sans-serif; color:#FFFFFF;  }
-.textstyle4 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
+#cell_36a80373 {  }
+#cell_6b364148 {  }
+#cell_4e5c10ee {  }
 #container_52a573a4 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:100px; background:none;  }
 #container_52a573a4_padding { margin: 10px; display: block;  }
 #container_2c0dbea0 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; background:none;  }
 #container_2c0dbea0_padding { margin: 10px; display: block;  }
-.textstyle5 { font-size:40pt; font-family:'Century Gothic', CenturyGothic, AppleGothic, sans-serif; color:#000000;  }
+.textstyle4 { font-size:40pt; font-family:'Century Gothic', CenturyGothic, AppleGothic, sans-serif; color:#000000;  }
 #container_637542e9 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:2525px; background:none;  }
-#container_76c2aff2 { vertical-align: top; border-radius: 15px; position:relative; display: inline-block; width:67%; min-height:2430px; background-color:#AFAFAF;  }
+.textstyle5 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
+#container_76c2aff2 { vertical-align: top; border-radius: 15px; position:relative; display: inline-block; width:55%; min-height:2430px; background-color:#AFAFAF;  }
 #container_76c2aff2_padding { margin: 10px; display: block;  }
 #container_66e5429d { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:2402px; background:none;  }
 #container_66e5429d_padding { margin: 10px; display: block;  }
