--- a/sub/resume_html.css
+++ b/sub/resume_html.css
@@ -33,6 +33,6 @@ body { background-color:#CECECE; padding:0;  margin: 0; }
 #container_7a967b52_padding { margin: 10px; display: block;  }
 #container_381e378b { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:1265px; background:none;  }
 #container_381e378b_padding { margin: 10px; display: block;  }
-#pdf_31c3ede7 { box-sizing: border-box; vertical-align: bottom; position:relative; display: inline-block; width:100%; height:1240px; background-color:#D1D1D1; border: 1px solid #A0A0A0;  }
+#pdf_184209dd { vertical-align: bottom; position:relative; display: inline-block; width:100%; height:1247px; background-color:#D1D1D1;  }
 #container_63cd1fee { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:30px; background:none;  }
 #container_63cd1fee_padding { margin: 10px; display: block;  }
